# weed

./: .gitignore  CMakeLists.txt  README.md  doxygen.config  libweed.pc.in
cmake/: Blas.cmake  Boost.cmake  CUDA.cmake  Complex_x2.cmake  Examples.cmake  FpMath.cmake  OpenCL.cmake  Pstridepow.cmake  Pthread.cmake  Qrack.cmake  TCapPow.cmake  VecCapPow.cmake
examples/: binary_addition_transformer.cpp  heart_attack.cpp  nand.cpp  nor.cpp  quantum_associative_memory.cpp  quantum_volume.cpp  xor.cpp  xor_qrack.cpp
examples/data/: LICENSE.txt
include/: abs.hpp  add.hpp  commuting.hpp  commuting_operation.hpp  complex_scalar.hpp  complex_storage.hpp  cpu_complex_storage.hpp  cpu_real_storage.hpp  device_tag.hpp  div.hpp  dtype.hpp  gpu_complex_storage.hpp  gpu_device.hpp  gpu_real_storage.hpp  gpu_storage.hpp  in_place.hpp  matmul.hpp  mean.hpp  module.hpp  mul.hpp  node.hpp  parameter.hpp  pool_item.hpp  real_scalar.hpp  real_storage.hpp  relu.hpp  scalar.hpp  sgd.hpp  shared_api.hpp  storage.hpp  sub.hpp  tensor.hpp  zero_grad.hpp
include/autograd/: adam.hpp  bci_loss.hpp  bci_with_logits_loss.hpp  cross_entropy_loss.hpp  node.hpp  sgd.hpp  zero_grad.hpp
include/common/: big_integer.hpp  complex16x2simd.hpp  complex8x2simd.hpp  config.h.in  cuda_kernels.cuh  cudaengine.cuh  dispatchqueue.hpp  oclapi.hpp  oclengine.hpp  parallel_for.hpp  rapidcsv.h  serializer.hpp  weed_functions.hpp  weed_types.hpp
include/devices/: gpu_device.hpp  pool_item.hpp  queue_item.hpp
include/enums/: activation_function_type.hpp  device_tag.hpp  dtype.hpp  module_type.hpp  quantum_function_type.hpp  storage_type.hpp
include/modules/: dropout.hpp  embedding.hpp  flatten.hpp  gelu.hpp  gru.hpp  layernorm.hpp  learned_positional_encoding.hpp  linear.hpp  logsoftmax.hpp  lstm.hpp  max.hpp  mean.hpp  mean_center.hpp  migrate_cpu.hpp  migrate_gpu.hpp  min.hpp  module.hpp  multihead_attention.hpp  positional_encoding.hpp  qrack_neuron.hpp  qrack_neuron_layer.hpp  qwen_decoder_layer.hpp  relu.hpp  reshape.hpp  rms_norm.hpp  rope.hpp  sequential.hpp  sigmoid.hpp  softmax.hpp  stddev.hpp  swiglu.hpp  tanh.hpp  transformer_encoder_layer.hpp  variance.hpp
include/ops/: abs.hpp  clamp.hpp  commuting.hpp  copy_broadcast.hpp  div.hpp  embedding.hpp  in_place.hpp  logsoftmax.hpp  matmul.hpp  mean.hpp  pow.hpp  real_extremum.hpp  real_unary.hpp  reduce.hpp  relu.hpp  softmax.hpp  sub.hpp  sum.hpp  triu_fill.hpp  unary.hpp  util.hpp
include/storage/: all_storage.hpp  complex_storage.hpp  cpu_complex_storage.hpp  cpu_int_storage.hpp  cpu_real_storage.hpp  cpu_storage.hpp  gpu_complex_storage.hpp  gpu_int_storage.hpp  gpu_real_storage.hpp  gpu_storage.hpp  int_storage.hpp  real_storage.hpp  sparse_cpu_complex_storage.hpp  sparse_cpu_real_storage.hpp  sparse_cpu_storage.hpp  storage.hpp  typed_storage.hpp
include/tensors/: base_tensor.hpp  complex_scalar.hpp  complex_tensor.hpp  flat_tensors.hpp  parameter.hpp  real_scalar.hpp  real_tensor.hpp  scalar.hpp  symbol_tensor.hpp  tensor.hpp
src/: abs.cpp  add.cpp  commuting.cpp  div.cpp  gpu_device.cpp  gpu_storage.cpp  in_place.cpp  matmul.cpp  mean.cpp  relu.cpp  scalar.cpp  shared_api.cpp  sub.cpp  tensor.cpp  weed_cl_precompile.cpp
src/common/: cudaengine.cu  dispatchqueue.cpp  functions.cpp  oclengine.cpp  parallel_for.cpp  qengine.cl  qengine.cu  qheader_double.cl  qheader_float.cl  qheader_half.cl  qheader_quad.cl  qheader_uint16.cl  qheader_uint32.cl  qheader_uint64.cl  qheader_uint8.cl
src/devices/: gpu_device.cpp
src/modules/: dropout.cpp  embedding.cpp  gru.cpp  layernorm.cpp  learned_positional_encoding.cpp  linear.cpp  logsoftmax.cpp  lstm.cpp  migrate_cpu.cpp  migrate_gpu.cpp  module.cpp  multihead_attention.cpp  positional_encoding.cpp  qrack_neuron.cpp  qrack_neuron_layer.cpp  qwen_decoder_layer.cpp  rope.cpp  sequential.cpp  softmax.cpp  swiglu.cpp  transformer_encoder_layer.cpp
src/ops/: abs.cpp  clamp.cpp  commuting.cpp  copy_broadcast.cpp  div.cpp  embedding.cpp  in_place.cpp  logsoftmax.cpp  matmul.cpp  mean.cpp  pow.cpp  real_extremum.cpp  real_unary.cpp  reduce.cpp  relu.cpp  softmax.cpp  sub.cpp  sum.cpp  triu_fill.cpp  util.cpp
src/storage/: cpu_complex_storage.cpp  cpu_int_storage.cpp  cpu_real_storage.cpp  gpu_complex_storage.cpp  gpu_int_storage.cpp  gpu_real_storage.cpp  sparse_cpu_complex_storage.cpp  sparse_cpu_real_storage.cpp  storage.cpp
src/tensors/: base_tensor.cpp  parameter.cpp  symbol_tensor.cpp  tensor.cpp
test/: benchmarks.cpp  benchmarks_main.cpp  test_main.cpp  tests.cpp  tests.hpp
